# pandacli

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: CODEOWNERS
.github/workflows/: publish.yml  release.yml
src/: cli.rs  main.rs  utils.rs
src/config/: app_config.rs
src/kommandoer/: diff_filer.rs  header.rs  io_utils.rs  mod.rs  operasjoner.rs  panda_murmur.rs  rutinefil_validering.rs  rutinefil_variabler.rs  summer_verdier.rs  utils.rs  velg_tilfeldig.rs
