[package]
name = "pandacli"
version = "0.0.9"
edition = "2024"

[[bin]]
name = "pcli"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde_json = "1.0"
serde = { version = "1.0.219", features = ["derive"] }
dirs = "6.0.0"
flate2 = "1.1.2"
rand = "0.9.1"
num-format = "0.4"