[package]
name = "pandacli"
version = "0.0.13"
edition = "2024"

[[bin]]
name = "pcli"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde_json = "1.0"
serde = { version = "1.0.219", features = ["derive"] }
dirs = "6.0.0"
flate2 = "1.1.2"
rand = "0.9.1"
num-format = "0.4"
rayon = "1.10"
indicatif = "0.18.0"
tempfile = "3.23.0"
uuid = { version = "1.4", features = ["v4"] }